# CPP_Workshop

ex1/: CMakeLists.txt  ConvexHull.cpp  ConvexHull.h  Makefile  Point.cpp  Point.h  PointSet.cpp  PointSet.h  PointSetBinaryOperations.cpp  PointSetBinaryOperations.cpp.cpp  README  ex1.tar
ex2/: .gitignore  CMakeLists.txt  Edge.cpp  Edge.h  Makefile  Point.cpp  Point.h  Polygon.cpp  Polygon.h  README  ShapeAlgorithms.cpp  ShapeAlgorithms.h  Shapes.cpp  SimpleTrapez.cpp  SimpleTrapez.h  Triangle.cpp  Triangle.h  ex2.tar  ex2_files.tar  tests_examples.tar  valgrind
ex3/: .gitignore  Makefile  Matrix.hpp  main.cpp  test.txt
ex3/schoolSol/: schoolSol.tar
